--- a/package.json
+++ b/package.json
@@ -21,16 +21,22 @@
   },
   "homepage": "https://github.com/vladmandic/stream-rtsp#readme",
   "keywords": [
-    "rtsp", "rtmp", "webrtc", "hls", "dash", "ffmpeg", "stream-server"
+    "rtsp",
+    "rtmp",
+    "webrtc",
+    "hls",
+    "dash",
+    "ffmpeg",
+    "stream-server"
   ],
-  "dependencies": {
-    "@vladmandic/pilogger": "^0.2.16"
-  },
   "devDependencies": {
-    "eslint": "^7.24.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint": "^8.4.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
-    "hint": "^6.1.3"
+    "hint": "^6.1.9"
+  },
+  "dependencies": {
+    "@vladmandic/pilogger": "^0.3.5"
   }
 }
